# BPX-rs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.MD
.github/workflows/: development.yml  release.yml
__old__/: table.rs
__old__/package/: decoder.rs  encoder.rs  mod.rs  utils.rs
__old__/sd/: encoder.rs  error.rs
__old__/shader/: symbol.rs
__old__/strings/: mod.rs
src/: bpx.rs  bpxp_old.rs  builder.rs  container.rs  decoder.rs  encoder.rs  error.rs  garraylen.rs  hash.rs  header.rs  lib.rs  macros.rs  section.rs  section_old.rs  strings.rs  table.rs  traits.rs  util.rs  utils.rs
src/bpxp/: decoder.rs  encoder.rs  mod.rs
src/buf/: mod.rs  reader.rs  writer.rs
src/compression/: crc32chksum.rs  easychksum.rs  mod.rs  weakchksum.rs  xz.rs  zlib.rs
src/core/: builder.rs  container.rs  decoder.rs  encoder.rs  error.rs  handle.rs  header.rs  mod.rs  options.rs  section.rs
src/core/compression/: crc32chksum.rs  mod.rs  weakchksum.rs  xz.rs  zlib.rs
src/core/data/: auto.rs  file.rs  memory.rs  mod.rs  utils.rs
src/package/: builder.rs  core.rs  decoder.rs  encoder.rs  error.rs  mod.rs  object.rs  options.rs  package.rs  table.rs  util.rs  utils.rs
src/sd/: array.rs  debug.rs  decoder.rs  encoder.rs  error.rs  formatting.rs  mod.rs  object.rs  value.rs
src/sd/serde/: deserialize.rs  mod.rs  serialize.rs
src/section/: auto.rs  file.rs  memory.rs  mod.rs
src/section/data/: file.rs  memory.rs  mod.rs
src/shader/: builder.rs  core.rs  decoder.rs  encoder.rs  error.rs  mod.rs  options.rs  shaderpack.rs  symbol.rs  table.rs
src/strings/: error.rs  mod.rs
src/variant/: mod.rs
src/variant/package/: decoder.rs  encoder.rs  error.rs  mod.rs  object.rs  utils.rs
src/variant/package/rev1/: encoder.rs  mod.rs
src/variant/shader/: decoder.rs  encoder.rs  error.rs  mod.rs  symbol.rs
tests/: bpx.rs  bpxp.rs  test.bpx
