[package]
name = "bpx"
version = "4.0.0-beta-3"
authors = ["Yuri Edward <yuri6037@outlook.com>"]
edition = "2021"
description = "BPX official rust implementation"
license = "BSD-3-Clause"
repository = "https://gitlab.com/bp3d/bpx/bpx-rs"
readme = "./README.MD"
keywords = ["BPX", "encoder", "decoder"]
categories = ["encoding", "rendering::data-formats", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.0.7"
byteorder = "1"
lzma-sys = "0.1.17"
num_cpus = "1.13.0"
libz-sys = "1.1.3"
serde = { version = "1.0.130", features = ["derive"], optional = true }
elsa = { version = "1.6.0", optional = true }
once_cell = { version = "1.9.0", optional = true }

[features]
debug-log = []
package = ["sd", "table"]
shader = ["sd", "table"]
sd = []
strings = ["elsa"]
table = ["strings", "once_cell"]

[package.metadata.docs.rs]
all-features = true
