[package]
name = "bpx"
version = "4.0.0-beta-8.1.0"
authors = ["Yuri Edward <yuri6037@outlook.com>"]
edition = "2021"
description = "BPX official rust implementation"
license = "BSD-3-Clause"
repository = "https://gitlab.com/bp3d/bpx/bpx-rs"
readme = "./README.MD"
keywords = ["BPX", "encoder", "decoder"]
categories = ["encoding", "rendering::data-formats", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.0.7"
byteorder = "1"

# The reason why we lock lzma-sys to static feature is because the library is unfortunatly unable to understand that
# macOS does not come with a proper lzma by defaut and as such should auto build as static to avoid linking against
# possibly wrong/incompatible Apple branded version of the library.
# To avoid creating frankenstein binarries under Apple platforms we just force static on all platforms, if you think
# (rightly) that this isn't right, please complain to https://github.com/alexcrichton/xz2-rs/tree/master/lzma-sys.
#
# Note for future possible dev: maybe fork or re-write lzma-sys to fix this permanently the right way!
lzma-sys = { version = "0.1.17", features = ["static"] }

num_cpus = "1.13.0"
libz-sys = "1.1.3"
serde = { version = "1.0.130", features = ["derive"], optional = true }
elsa = { version = "1.6.0", optional = true }
once_cell = { version = "1.9.0", optional = true }

[features]
# Enables debug output of compression routines.
debug-log = []

# Enables decoding and encoding of BPXP.
package = ["sd", "table"]

# Enables decoding and encoding of BPXS.
shader = ["sd", "table"]

# Enables BPXSD.
sd = []

# Enables formatting BPXSD objects.
sd-formatting = ["sd"]

# Enables string helpers.
strings = ["elsa"]

# Enable named table helpers.
table = ["strings", "once_cell"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
